--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app="myCalculator">
 <head>
-    <meta http-equiv="content-type" content="text/html"; charset="UTF-8">
-    <meta name="viewpoer" content="width=device-width", initial-scale="1">
+    <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="assets/calculator.css">
     <!-- Javascript -->
@@ -11,30 +11,35 @@
 </head>
 <body>
 
-<div id="myCalculator">
-
+<div id="myCalculator" ng-controller="CalculatorController">
     <main>
-        <section>
+        <section class="inc">
             <div>
-                <h4>Incadescent</h4>
-                <p>100.0</p>
-                <p>13.14</p>
+                <h4>Incandescent</h4>
+                <p>{{inc_wattage}}</p>
+                <p>{{inc_cost}}</p>
             </div>
         </section>
-        <section>
-            <h4>Halogen</h4>
-            <p>72.0</p>
-            <p>9.46</p>
+        <section class="hal">
+            <div>
+                <h4>Halogen</h4>
+                <p>{{hal_wattage}}</p>
+                <p>{{hal_cost}}</p>
+            </div>
         </section>
-        <section>
-            <h4>CFL</h4>
-            <p>23.4</p>
-            <p>3.07</p>
+        <section class="cfl">
+            <div>
+                <h4>CFL</h4>
+                <p>{{cfl_wattage}}</p>
+                <p>{{cfl_cost}}</p>
+            </div>
         </section>
-        <section>
-            <h4>LED</h4>
-            <p>20.0</p>
-            <p>2.63</p>
+        <section class="led">
+            <div>
+                <h4>LED</h4>
+                <p>{{led_wattage}}</p>
+                <p>{{led_cost}}</p>
+            </div>
         </section>
     </main>
 
@@ -42,25 +47,21 @@
         <div>
             <h4>Lumens</h4>
             <p>Brightness <br>of bulb</p>
-            <select>
-                <option value="600">600</option>
-                <option value="900">900</option>
+            <select ng-change="calculate()" ng-model="current_lumens" ng-options="o as o for o in lumen_options"> <!-- Come back to this -->
             </select>
         </div>
         <div>
             <h4>kWh</h4>
             <p>Killowatt-<br>hour cost</p>
-            <input type="number" value="12"> cents
+            <input type="number" ng-change="calculate()" ng-model="current_cost" value={{current_cost}}> cents
         </div>
         <div>
             <h4>Hours</h4>
             <p>Usage <br>per day</p>
-            <input type="number" value="3">
+            <input type="number" ng-change="calculate()" ng-model="current_hours" value={{current_hours}}>
         </div>
     </form>
 </div>
-
-
 
 </body>
 </html>
